force-app/main/default/objects/cgc_sync__Sync_Message_Translation__c/cgc_sync__Sync_Message_Translation__c.object-meta.xml
<CustomObject>
    <description>Contains translated Sync Messages</description>
    <label>Sync Message Translation</label>
    <nameField>
        <displayFormat>SMT-{000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Message Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>