force-app/main/default/objects/cgc_sync__Sync_Message_Translation__c/fields/cgc_sync__Language__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Language__c</fullName>
    <description>Name of the language.</description>
    <label>Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>