force-app/main/default/objects/cgc_sync__Sync_Message_Translation__c/fields/cgc_sync__LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__LanguageCode__c</fullName>
    <description>En/Us</description>
    <label>Language Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>