force-app/main/default/objects/cgc_sync__Sync_Message_Translation__c/fields/cgc_sync__Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Message__c</fullName>
    <description>Refers to the sync message record.</description>
    <label>Sync Message</label>
    <referenceTo>cgc_sync__Sync_Message__c</referenceTo>
    <relationshipName>Sync_Message_Translation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>