force-app/main/default/objects/cgc_sync__Sync_Message_Translation__c/fields/cgc_sync__Text__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Text__c</fullName>
    <description>Translated text.</description>
    <label>Text</label>
    <type>TextArea</type>
</CustomField>